# python-safari

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/safari/: constants.py  game.py  main.py  resource_manager.py  score_manager.py
src/safari/collision/: collision_system.py
src/safari/entities/: track.py
src/safari/entities/animals/: base_animal.py  base_animal_spawner.py
src/safari/entities/animals/bizon/: bizon.py  bizon_spawner.py
src/safari/entities/animals/gazelle/: __init__.py  bizon_spawner.py  gazelle.py  gazelle_spawner.py
src/safari/entities/animals/rhino/: __init__.py  rhino.py  rhino_spawner.py
src/safari/entities/bullet/: bullet.py  bullet_manager.py
src/safari/entities/hunter/: hunter.py
src/safari/entities/obstacles/: barrier.py  barrier_spawner.py  palm.py  palm_spawner.py
src/safari/ui/: animal_indicator_manager.py  button_animation_manager.py  rules.py  rules_window.py  shot_indicator_manager.py
src/safari/views/: game_over_view.py  game_view.py  rules_view.py
tests/: basic_test.py
