[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safari-arcade"
version = "0.1.0"
description = "Arcade implementation of Soviet Safari slot machine game"
readme = "README.md"
authors = [
    { name = "Milana Melnikova", email = "melnikova.milana2020@mail.ru" },
]
keywords = []

requires-python = ">=3.12"
dependencies = [
    "arcade>=3.3.3",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "hatchling>=1.28.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.9",
]

[project.scripts]
safari = "src.safari.game:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "B",   # flake8-bugbear (лучшие практики)
    "C4",  # flake8-comprehensions (генераторы)
    "SIM", # flake8-simplify (упрощение)
]

# Exclude the S101 rule (using Assert) for test files
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"**/test_*.py" = ["S101"]

[tool.bandit]
exclude_dirs = [".venv", "build", "dist", "docs", "__pycache__"]
aggregate_by = "SEVERITY"  # Grouping by severity level
confidence = "HIGH"        # Show only highly reliable findings
severity = "MEDIUM"        # Minimum severity level
